# sparkling

./: .env  .gitignore  .pre-commit-config.yaml  Dockerfile.dagster  Dockerfile.spark  LICENSE  Makefile  README.md  docker-compose.yml  log4j2.properties  pyproject.toml  requirements.txt  spark-pipeline.yml
dagster/: dagster.yaml  workspace.yaml
dagster/project/: __init__.py  config.py
dagster/sparkling/: __init__.py  config.py
data/landing/: batch_1_1771875991.csv
dbt/: dbt_project.yml
dbt/models/: sources.yml
dbt/seeds/: source_numbers.csv
docker/jupyter/: Dockerfile  requirements.txt
docker/spark-4.0.1-comet/: Dockerfile
metadata/: iceberg_catalog.db
notebooks/: hello_jupyter.ipynb  hello_spark.py  spark_playground.ipynb
pipelines/: raw_transactions.yml
spark-warehouse/filtered_evens/: .part-00000-8bb108d2-c19b-4463-b551-bab3d7500703-c000.snappy.parquet.crc  part-00000-8bb108d2-c19b-4463-b551-bab3d7500703-c000.snappy.parquet
spark-warehouse/final_stats/: .part-00000-7408a5dc-5a6b-457a-bdbf-aff72e90e25d-c000.snappy.parquet.crc  part-00000-7408a5dc-5a6b-457a-bdbf-aff72e90e25d-c000.snappy.parquet
spark-warehouse/source_numbers/: .part-00000-ce81a52d-ed61-478b-825e-940b9a7ee413-c000.snappy.parquet.crc  part-00000-ce81a52d-ed61-478b-825e-940b9a7ee413-c000.snappy.parquet
src/: 01_lazy_evaluation.py  02_flows.py  03_verify_sdp.py  assets.py  check_counts.py  config.py  debug_data.py  debug_iceberg.py  generate_transactions.py  hello_spark.py  masterclass.py  pipeline.py  seed_raw.py  setup_namespaces.py  show_marts.py  utils.py  verify.py
(+42 files in other folders)
