[project]
name = "sparkling"
version = "0.1.0"
description = "A Spark 4.1.1 development environment with Iceberg REST Catalog and dbt"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pyspark[pipelines]==4.1.1",
    "pyiceberg",
    "dbt-spark[session]",
    "ruff",
    "pre-commit",
    "sqlfmt",
]

[tool.ruff]
# Same as Black.
line-length = 88

# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]

[tool.ruff.lint]
# Enable pycodestyle (E) and Pyflakes (F) codes by default.
select = ["E", "F", "I"]
ignore = []

# Allow autofix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

[tool.ruff.lint.mccabe]
# Flag errors (`C901`) whenever the complexity level exceeds 10.
max-complexity = 10

[tool.sqlfmt]
line_length = 88
